--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,4 @@
 .DS_Store
+/.idea/workspace.xml
 node_modules/
-dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+/dist
