--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "element-ui": "^2.2.1",
-    "onlyid-web-common": "file:../onlyid-web-common",
-    "vue": "^2.5.13",
-    "vue-router": "^3.0.1"
+    "element-ui": "^2.11.1",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.7",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-plugin-eslint": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
+    "@vue/cli-plugin-babel": "^3.9.2",
+    "@vue/cli-plugin-eslint": "^3.9.2",
+    "@vue/cli-service": "^3.9.3",
     "@vue/eslint-config-standard": "^3.0.5",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
     "root": true,
