--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "async-validator": "^3.2.4",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "eventemitter3": "^4.0.0",
