--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async-validator": "^3.2.4",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "core-js": "^3.6.5",
     "eventemitter3": "^4.0.0",
     "lodash": "^4.17.15",
     "qs": "^6.9.3",
@@ -20,7 +21,8 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "regenerator-runtime": "^0.13.5"
   },
   "scripts": {
     "start": "react-scripts start",
