--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "regenerator-runtime": "^0.13.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
