--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "eventemitter3": "^4.0.0",
     "lodash": "^4.17.15",
+    "moment": "^2.27.0",
     "qs": "^6.9.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
