--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "async-validator": "^3.2.4",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "core-js": "^3.6.5",
     "eventemitter3": "^4.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
@@ -24,8 +23,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
-    "regenerator-runtime": "^0.13.5"
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
