chore: 更新一下依赖包的版本

--- a/package.json
+++ b/package.json
@@ -6,25 +6,25 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "async-validator": "^3.2.4",
-    "axios": "^0.19.2",
-    "classnames": "^2.2.6",
-    "eventemitter3": "^4.0.0",
-    "lodash": "^4.17.15",
-    "moment": "^2.27.0",
-    "qs": "^6.9.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "async-validator": "^3.5.2",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.2",
+    "eventemitter3": "^4.0.7",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "qs": "^6.11.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.9",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "^4.0.3",
+    "redux": "^4.2.1"
+  },
+  "overrides": {
+    "react-error-overlay": "6.0.9"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "PORT=3001 react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
