refactor: 更新新版官网地址。

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
     "not op_mini all"
   ],
   "proxy": "http://localhost:8001",
-  "homepage": "https://www.onlyid.net/oauth"
+  "homepage": "https://onlyid.net/oauth"
 }
